<resources>
    <string name="app_name">Yugioh Deck Generator</string>
    <string name="appName">Yugioh Deck Generator</string>
    <string name="generate_deck">Generate Deck</string>
    <string name="all_cards">All Cards</string>
    <string name="my_decks">My Decks</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="cartaNome">A Cell Breeding Device</string>
    <string name="cardAtk">ATK/: 2800</string>
    <string name="cardDef">DEF/ 2400</string>
    <string name="cardLevel">Level</string>
    <string name="deck_name">Deck Seu Cleitinho</string>
    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece It has roots in a piece It has roots in a piece</string>
    <string name="lorem_ipsum2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece It has roots in a piece It has roots in a piece piece It has roots in a piece piece It has roots in a piece piece It has roots in a piece piece It has roots in a piece piece It has roots in a piece piece It has roots in a piece</string>
    <string name="cardDetailLevel">Level: 8</string>
    <string name="card_detail_type">Type: Effect Monster</string>
    <string name="card_detail_race">Race: Water</string>
    <string name="card_detail_rarity">Rarity: Common</string>
    <string name="description">Description:</string>
    <string name="card_detail_screen">Test Card Detail</string>
</resources>