<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardDetailActivity"
    android:background="@color/cinzaPrimario">

    <View
        android:id="@+id/viewCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_card_detail"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/viewCardDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/cartaNome"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cardImage"
        android:layout_width="240dp"
        android:layout_height="350dp"
        android:src="@drawable/card"
        app:layout_constraintTop_toBottomOf="@id/cardName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardAtk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintStart_toStartOf="@id/cardImage"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:text="@string/cardAtk"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintEnd_toEndOf="@id/cardImage"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:text="@string/cardDef"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardDef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/cardDetailLevel"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/card_detail_type"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/card_detail_race"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardRarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardRace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/card_detail_rarity"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardDescriptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardRarity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/marko_one_regular"
        android:text="@string/description"
        android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardDescriptionContent"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/marko_one_regular"
            android:text="@string/lorem_ipsum2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardDescriptionName"
            android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>